--- a/tasks/redhat-remi.yml
+++ b/tasks/redhat-remi.yml
@@ -1,14 +1,14 @@
 ---
 
 - name: get the package facts
-  package_facts:
+  ansible.builtin.package_facts:
     manager: "auto"
 
 - name: show packages
-  debug: var=ansible_facts.packages
+  ansible.builtin.debug: var=ansible_facts.packages
 
 - name: Import Remi rpm repository keys
-  rpm_key:
+  ansible.builtin.rpm_key:
     key: "{{ item }}"
     state: present
   with_items:
@@ -19,33 +19,33 @@
   until: pkg_result is success
 
 - name: RedHat6 | Install Remi repo
-  yum: name=http://rpms.remirepo.net/enterprise/remi-release-6.rpm
+  ansible.builtin.yum: name=http://rpms.remirepo.net/enterprise/remi-release-6.rpm
        state=present
   when: ansible_distribution_major_version == "6" and 'remi-release' not in ansible_facts.packages
   register: pkg_result
   until: pkg_result is success
 - name: RedHat7 | Install Remi repo
-  yum: name=http://rpms.remirepo.net/enterprise/remi-release-7.rpm
+  ansible.builtin.yum: name=http://rpms.remirepo.net/enterprise/remi-release-7.rpm
        state=present
   when: ansible_distribution_major_version == "7" and 'remi-release' not in ansible_facts.packages
   register: pkg_result
   until: pkg_result is success
 - name: RedHat8 | Install Remi repo
-  yum: name=http://rpms.remirepo.net/enterprise/remi-release-8.rpm
+  ansible.builtin.yum: name=http://rpms.remirepo.net/enterprise/remi-release-8.rpm
        state=present
   when: ansible_distribution_major_version == "8" and 'remi-release' not in ansible_facts.packages
   register: pkg_result
   until: pkg_result is success
 
 - name: check if remi-php repo is enabled
-  command: "grep '^enabled=' /etc/yum.repos.d/remi-php{{ php_remi_version }}.repo"
+  ansible.builtin.command: "grep '^enabled=' /etc/yum.repos.d/remi-php{{ php_remi_version }}.repo"
   register: remistate
   changed_when: false
   when: ansible_distribution_major_version|int < 8
 
 # https://github.com/ansible/ansible-modules-extras/issues/2384
 - name: enable remi repository for php
-  command: "yum-config-manager --enable remi-php{{ php_remi_version }}"
+  ansible.builtin.command: "yum-config-manager --enable remi-php{{ php_remi_version }}"
   # yum_repository:
   #   name: remi-php56
   #   enable: yes
@@ -55,11 +55,11 @@
     - not ('enabled=1' in remistate.stdout)
 
 - name: RHEL8 | reset php stream to use remi latest
-  command: "dnf module reset php -y"
+  ansible.builtin.command: "dnf module reset php -y"
   when:
     - ansible_distribution_major_version|int >= 8
     - ansible_facts.packages['php-fpm']
     - ansible_facts.packages['php-fpm'][0]['version'] is version_compare('7.4', '<')
 - name: RHEL8 | enable remi repository for php
-  command: "dnf module enable php:remi-7.4 -y"
+  ansible.builtin.command: "dnf module enable php:remi-7.4 -y"
   when: ansible_distribution_major_version|int >= 8
