--- a/tasks/travis.yml
+++ b/tasks/travis.yml
@@ -5,11 +5,11 @@
 ##  "asn1 encoding routines:ASN1_mbstring_ncopy:string too longi:a_mbstr.c:154:maxsize=64" as
 ##  cn=testing-gce-4d114f77-0ff1-41fb-bd33-22879d3249da.c.eco-emissary-99515.internal
 - name: Default | set certificate_cn
-  set_fact:
+  ansible.builtin.set_fact:
     certificate_cn: "{{ ansible_fqdn }}"
 
 - name: Travis | set certificate_cn to shorter name to avoid openssl bug
-  set_fact:
+  ansible.builtin.set_fact:
     certificate_cn: "testing-travis.internal"
     travisci: true
     rolesroot: '/etc/ansible/roles'
@@ -19,12 +19,12 @@
   when: ansible_env['TRAVIS'] is defined and ansible_env['TRAVIS'] == 'true'
 
 - name: Check if /home/kitchen/.gem exists
-  stat:
+  ansible.builtin.stat:
     path: /home/kitchen/.gem
   register: gemdir
 
 - name: Travis | kitchen-docker | ensure /home/kitchen/.gem permissions are correct
-  file:
+  ansible.builtin.file:
     dest: /home/kitchen/.gem
     owner: kitchen
     mode: '0755'
