--- a/tasks/lief.yml
+++ b/tasks/lief.yml
@@ -2,12 +2,12 @@
 # https://github.com/MISP/MISP/blob/2.4/INSTALL/INSTALL.rhel7.txt#L368
 
 - name: Ensure lief dependencies are present
-  package:
+  ansible.builtin.package:
     name: cmake
     state: present
 
 - name: Install lief with pip
-  pip:
+  ansible.builtin.pip:
     name: lief
     state: present
     version: "{{ misp_lief_version | default(omit) }}"
@@ -22,7 +22,7 @@
   become_user: "{{ www_user }}"
 
 - name: Ensure LIEF is working
-  command: "python -c 'import lief'"
+  ansible.builtin.command: "python -c 'import lief'"
   environment:
     PATH: "{{ misp_virtualenv }}/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
   changed_when: false
