--- a/tasks/misp-feeds.yml
+++ b/tasks/misp-feeds.yml
@@ -1,11 +1,11 @@
 ---
 
 - name: flush handlers as we need service up for API call
-  meta: flush_handlers
+  ansible.builtin.meta: flush_handlers
 
 ## FIXME! not idempotent, no way to list feeds with their status
 - name: enable feeds
-  uri:
+  ansible.builtin.uri:
     url: "{{ misp_local_base_url | default(misp_base_url) }}/feeds/enable/{{ item }}"
     method: POST
     headers:
@@ -19,7 +19,7 @@
 # - debug: var=enableresults
 
 - name: fetch from feeds
-  uri:
+  ansible.builtin.uri:
     url: "{{ misp_local_base_url | default(misp_base_url) }}/feeds/fetchFromFeed/{{ item }}"
     method: GET
     headers:
@@ -31,7 +31,7 @@
   register: fetchresults
 
 - name: disable feeds
-  uri:
+  ansible.builtin.uri:
     url: "{{ misp_local_base_url | default(misp_base_url) }}/feeds/disable/{{ item }}"
     method: POST
     headers:
