--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -251,7 +251,7 @@
 
 ### https://github.com/geerlingguy/ansible-role-php-pecl/blob/master/tasks/main.yml
 ### FIXME! pecl/redis requires PHP (version >= 7.0.0, version <= 7.1.0, excluded versions: 6.0.0)
-# - name: Install PECL libaries.
+# - name: Install PECL libraries.
 #   ansible.builtin.shell: "yes \"\" | pecl install {{ item }}"
 #   register: pecl_result
 #   changed_when: "pecl_result.rc == 0"
