--- a/meta/main.yml
+++ b/meta/main.yml
@@ -4,7 +4,7 @@ galaxy_info:
   author: juju4
   description: MISP - Malware Information Sharing Platform & Threat Sharing
   license: BSD
-  min_ansible_version: 1.9
+  min_ansible_version: '1.9'
   #
   # Below are all platforms currently available. Just uncomment
   # the ones that apply to your role. If you don't see your
@@ -13,8 +13,7 @@ galaxy_info:
   platforms:
     - name: EL
       versions:
-        - 8
-        - 7
+        - all
     - name: Ubuntu
       versions:
         - focal
