--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,6 +19,11 @@ repos:
     hooks:
       - id: ansible-lint
         files: \.(yaml|yml)$
+  - repo: https://github.com/codespell-project/codespell
+    rev: v2.1.0
+    hooks:
+      - id: codespell
+        args: [-I, .codespellignore, --exclude-file, files/pgp-09e2cd4944e6cbcd.asc]
 #  - repo: git@github.com:Yelp/detect-secrets
 #    rev: v1.1.0
 #    hooks:
