.kitchen.yml: update settings including chef_omnibus_url as needed for verify stage

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -21,7 +21,11 @@ provisioner:
   ansible_extra_flags: <%= ENV['ANSIBLE_EXTRA_FLAGS'] %>
   ansible_cfg_path: test/vagrant/ansible.cfg
   require_ansible_omnibus: true
-  # require_chef_for_busser: false
+  # planned for deprecation per https://docs.chef.io/workstation/config_yml_kitchen/
+  require_chef_omnibus: true
+  require_chef_for_busser: true
+  require_ruby_for_busser: false
+  chef_omnibus_url: https://omnitruck.chef.io/install.sh
   enable_yum_epel: true
   ansible_connection: ssh
   ansible_omnibus_url: https://raw.githubusercontent.com/juju4/omnibus-ansible/master/ansible_install.sh
