--- a/.github/workflows/default-kitchen.yml
+++ b/.github/workflows/default-kitchen.yml
@@ -23,6 +23,11 @@ jobs:
             suite: default
             experimental: false
           - distribution: ubuntu
+            version: '22.04'
+            version2: 2204
+            suite: default
+            experimental: true
+          - distribution: ubuntu
             version: '20.04'
             version2: 2004
             suite: default
