--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -31,6 +31,7 @@ provisioner:
   ansible_omnibus_url: https://raw.githubusercontent.com/juju4/omnibus-ansible/master/ansible_install.sh
 
 platforms:
+  - name: ubuntu-22.04
   - name: ubuntu-20.04
   - name: ubuntu-18.04
   - name: centos-8-Stream
